welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:30: error: not found: value nbPas
	}while (nbPas = 1)
                ^